@@ -80,6 +80,7 @@ dillo-fltk2
  - Enabled colspan=0 in tables parsing.
  - Fixed a memory leak in cookies.c
  - Added "standard_widget_colors" preference. It allows a more stylish look.
+ - Fixed the return value of Cache_parse_multiple_field.
    Patches: place
 +- Fixed a problem with locally-installed dpis.
  - Added code for optional image loading (nice interface) very advanced!
